cl_physics: add sv_friction_slick
Also sets it in physics configs for games that didn't have slick.

--- a/physics.cfg
+++ b/physics.cfg
@@ -35,6 +35,7 @@ set g_physics_xonotic_warsowbunny_topspeed 925
 set g_physics_xonotic_warsowbunny_accel 0.1593
 set g_physics_xonotic_warsowbunny_backtosideratio 0.8
 set g_physics_xonotic_friction 6
+set g_physics_xonotic_friction_slick 0.5
 set g_physics_xonotic_accelerate 15
 set g_physics_xonotic_stopspeed 100
 set g_physics_xonotic_airaccelerate 2
@@ -69,6 +70,7 @@ set g_physics_nexuiz_warsowbunny_topspeed 925
 set g_physics_nexuiz_warsowbunny_accel 0.1593
 set g_physics_nexuiz_warsowbunny_backtosideratio 0.8
 set g_physics_nexuiz_friction 7
+set g_physics_nexuiz_friction_slick 7
 set g_physics_nexuiz_accelerate 8
 set g_physics_nexuiz_stopspeed 100
 set g_physics_nexuiz_airaccelerate 5.5
@@ -103,6 +105,7 @@ set g_physics_quake_warsowbunny_topspeed 925
 set g_physics_quake_warsowbunny_accel 0.1593
 set g_physics_quake_warsowbunny_backtosideratio 0.8
 set g_physics_quake_friction 4
+set g_physics_quake_friction_slick 4
 set g_physics_quake_accelerate 10
 set g_physics_quake_stopspeed 100
 set g_physics_quake_airaccelerate 106.66666666666666666666
@@ -137,6 +140,7 @@ set g_physics_warsow_warsowbunny_topspeed 925
 set g_physics_warsow_warsowbunny_accel 0.1593
 set g_physics_warsow_warsowbunny_backtosideratio 0.8
 set g_physics_warsow_friction 8
+set g_physics_warsow_friction_slick 0
 set g_physics_warsow_accelerate 15
 set g_physics_warsow_stopspeed 100
 set g_physics_warsow_airaccelerate 1
@@ -171,6 +175,7 @@ set g_physics_xdf_warsowbunny_topspeed 925
 set g_physics_xdf_warsowbunny_accel 0.1593
 set g_physics_xdf_warsowbunny_backtosideratio 0.8
 set g_physics_xdf_friction 5.8
+set g_physics_xdf_friction_slick 0
 set g_physics_xdf_accelerate 15
 set g_physics_xdf_stopspeed 100
 set g_physics_xdf_airaccelerate 1
@@ -205,6 +210,7 @@ set g_physics_quake3_warsowbunny_topspeed 925
 set g_physics_quake3_warsowbunny_accel 0.1593
 set g_physics_quake3_warsowbunny_backtosideratio 0.8
 set g_physics_quake3_friction 6
+set g_physics_quake3_friction_slick 0
 set g_physics_quake3_accelerate 10
 set g_physics_quake3_stopspeed 100
 set g_physics_quake3_airaccelerate 1
@@ -239,6 +245,7 @@ set g_physics_cpma_warsowbunny_topspeed 925
 set g_physics_cpma_warsowbunny_accel 0.1593
 set g_physics_cpma_warsowbunny_backtosideratio 0.8
 set g_physics_cpma_friction 6
+set g_physics_cpma_friction_slick 0
 set g_physics_cpma_accelerate 15
 set g_physics_cpma_stopspeed 100
 set g_physics_cpma_airaccelerate 1
@@ -273,6 +280,7 @@ set g_physics_vecxis_warsowbunny_topspeed 925
 set g_physics_vecxis_warsowbunny_accel 0.1593
 set g_physics_vecxis_warsowbunny_backtosideratio 0.8
 set g_physics_vecxis_friction 5
+set g_physics_vecxis_friction_slick 5
 set g_physics_vecxis_accelerate 5.5
 set g_physics_vecxis_stopspeed 100
 set g_physics_vecxis_airaccelerate 5.5
@@ -307,6 +315,7 @@ set g_physics_quake2_warsowbunny_topspeed 925
 set g_physics_quake2_warsowbunny_accel 0.1593
 set g_physics_quake2_warsowbunny_backtosideratio 0.8
 set g_physics_quake2_friction 6
+set g_physics_quake2_friction_slick 0
 set g_physics_quake2_accelerate 10
 set g_physics_quake2_stopspeed 100
 set g_physics_quake2_airaccelerate 1
@@ -341,6 +350,7 @@ set g_physics_bones_warsowbunny_topspeed 925
 set g_physics_bones_warsowbunny_accel 0.1593
 set g_physics_bones_warsowbunny_backtosideratio 0.8
 set g_physics_bones_friction 5.97
+set g_physics_bones_friction_slick 0
 set g_physics_bones_accelerate 15
 set g_physics_bones_stopspeed 100
 set g_physics_bones_airaccelerate 1
@@ -375,6 +385,7 @@ set g_physics_overkill_warsowbunny_topspeed 925
 set g_physics_overkill_warsowbunny_accel 0.1593
 set g_physics_overkill_warsowbunny_backtosideratio 0.8
 set g_physics_overkill_friction 8
+set g_physics_overkill_friction_slick 0.5
 set g_physics_overkill_accelerate 15
 set g_physics_overkill_stopspeed 100
 set g_physics_overkill_airaccelerate 2
