cl_physics: add sv_doublejump

--- a/physics.cfg
+++ b/physics.cfg
@@ -43,6 +43,7 @@ set g_physics_xonotic_airaccelerate 2
 set g_physics_xonotic_airstopaccelerate 3
 set g_physics_xonotic_airstopaccelerate_full 0
 set g_physics_xonotic_slickaccelerate 15
+set g_physics_xonotic_doublejump 0
 set g_physics_xonotic_track_canjump 0
 set g_physics_xonotic_stepdown 2
 
@@ -79,6 +80,7 @@ set g_physics_nexuiz_airaccelerate 5.5
 set g_physics_nexuiz_airstopaccelerate 0
 set g_physics_nexuiz_airstopaccelerate_full 0
 set g_physics_nexuiz_slickaccelerate 8
+set g_physics_nexuiz_doublejump 0
 set g_physics_nexuiz_track_canjump 0
 set g_physics_nexuiz_stepdown 0
 
@@ -115,6 +117,7 @@ set g_physics_quake_airaccelerate 106.66666666666666666666
 set g_physics_quake_airstopaccelerate 0
 set g_physics_quake_airstopaccelerate_full 0
 set g_physics_quake_slickaccelerate 10
+set g_physics_quake_doublejump 0
 set g_physics_quake_track_canjump 1
 set g_physics_quake_stepdown 0
 
@@ -151,6 +154,7 @@ set g_physics_warsow_airaccelerate 1
 set g_physics_warsow_airstopaccelerate 2.5
 set g_physics_warsow_airstopaccelerate_full 0
 set g_physics_warsow_slickaccelerate 15
+set g_physics_warsow_doublejump 1
 set g_physics_warsow_track_canjump 0
 set g_physics_warsow_stepdown 0
 
@@ -187,6 +191,7 @@ set g_physics_xdf_airaccelerate 1
 set g_physics_xdf_airstopaccelerate 2.5
 set g_physics_xdf_airstopaccelerate_full 0
 set g_physics_xdf_slickaccelerate 15
+set g_physics_xdf_doublejump 1
 set g_physics_xdf_track_canjump 0
 set g_physics_xdf_stepdown 2
 
@@ -223,6 +228,7 @@ set g_physics_quake3_airaccelerate 1
 set g_physics_quake3_airstopaccelerate 0
 set g_physics_quake3_airstopaccelerate_full 0
 set g_physics_quake3_slickaccelerate 1
+set g_physics_quake3_doublejump 0
 set g_physics_quake3_track_canjump 1
 set g_physics_quake3_stepdown 0
 
@@ -259,6 +265,7 @@ set g_physics_cpma_airaccelerate 1
 set g_physics_cpma_airstopaccelerate 2.5
 set g_physics_cpma_airstopaccelerate_full 1
 set g_physics_cpma_slickaccelerate 15
+set g_physics_cpma_doublejump 0
 set g_physics_cpma_track_canjump 1
 set g_physics_cpma_stepdown 0
 
@@ -295,6 +302,7 @@ set g_physics_vecxis_airaccelerate 5.5
 set g_physics_vecxis_airstopaccelerate 0
 set g_physics_vecxis_airstopaccelerate_full 0
 set g_physics_vecxis_slickaccelerate 5.5
+set g_physics_vecxis_doublejump 0
 set g_physics_vecxis_track_canjump 0
 set g_physics_vecxis_stepdown 0
 
@@ -331,6 +339,7 @@ set g_physics_quake2_airaccelerate 1
 set g_physics_quake2_airstopaccelerate 0
 set g_physics_quake2_airstopaccelerate_full 0
 set g_physics_quake2_slickaccelerate 10
+set g_physics_quake2_doublejump 1
 set g_physics_quake2_track_canjump 1
 set g_physics_quake2_stepdown 0
 
@@ -367,6 +376,7 @@ set g_physics_bones_airaccelerate 1
 set g_physics_bones_airstopaccelerate 2.5
 set g_physics_bones_airstopaccelerate_full 1
 set g_physics_bones_slickaccelerate 15
+set g_physics_bones_doublejump 0
 set g_physics_bones_track_canjump 0
 set g_physics_bones_stepdown 2
 
@@ -403,5 +413,6 @@ set g_physics_overkill_airaccelerate 2
 set g_physics_overkill_airstopaccelerate 3
 set g_physics_overkill_airstopaccelerate_full 0
 set g_physics_overkill_slickaccelerate 15
+set g_physics_overkill_doublejump 0
 set g_physics_overkill_track_canjump 0
 set g_physics_overkill_stepdown 2
