cl_physics: add jumpspeedcap_*
Migrates _min and _max to STAT networking, using nan instead of the
empty string because nan can be sent as a float.

Also updates isnan() to the more optimal code.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -807,8 +807,9 @@ alias _gunalign_update "_gunalign_$v_flipped$menu_cl_gunalign"
 
 set cl_shootfromfixedorigin "" "dummy cvar, value is synced from the server's g_shootfromfixedorigin setting"
 
-set cl_jumpspeedcap_min "" "dummy cvar, value is synced from the server's sv_jumpspeedcap_min setting"
-set cl_jumpspeedcap_max "" "dummy cvar, value is synced from the server's sv_jumpspeedcap_max setting"
+// RELEASE TODO: remove after releasing 0.9, these use STATs instead of stuffcmd now:
+set cl_jumpspeedcap_min "" "deprecated cvar, value was synced from the server's sv_jumpspeedcap_min setting"
+set cl_jumpspeedcap_max "" "deprecated cvar, value was synced from the server's sv_jumpspeedcap_max setting"
 
 seta cl_noantilag 0 "enable this if you believe antilag is bad"
 
