--- a/physics.cfg
+++ b/physics.cfg
@@ -44,6 +44,9 @@ set g_physics_xonotic_airstopaccelerate 3
 set g_physics_xonotic_airstopaccelerate_full 0
 set g_physics_xonotic_slickaccelerate 15
 set g_physics_xonotic_doublejump 0
+set g_physics_xonotic_jumpspeedcap_min "nan"
+set g_physics_xonotic_jumpspeedcap_max "nan"
+set g_physics_xonotic_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xonotic_track_canjump 0
 set g_physics_xonotic_stepdown 2
 
@@ -81,6 +84,9 @@ set g_physics_nexuiz_airstopaccelerate 0
 set g_physics_nexuiz_airstopaccelerate_full 0
 set g_physics_nexuiz_slickaccelerate 8
 set g_physics_nexuiz_doublejump 0
+set g_physics_nexuiz_jumpspeedcap_min "nan"
+set g_physics_nexuiz_jumpspeedcap_max "nan"
+set g_physics_nexuiz_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_nexuiz_track_canjump 0
 set g_physics_nexuiz_stepdown 0
 
@@ -118,6 +124,9 @@ set g_physics_quake_airstopaccelerate 0
 set g_physics_quake_airstopaccelerate_full 0
 set g_physics_quake_slickaccelerate 10
 set g_physics_quake_doublejump 0
+set g_physics_quake_jumpspeedcap_min "nan"
+set g_physics_quake_jumpspeedcap_max "nan"
+set g_physics_quake_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake_track_canjump 1
 set g_physics_quake_stepdown 0
 
@@ -155,6 +164,9 @@ set g_physics_warsow_airstopaccelerate 2.5
 set g_physics_warsow_airstopaccelerate_full 0
 set g_physics_warsow_slickaccelerate 15
 set g_physics_warsow_doublejump 1
+set g_physics_warsow_jumpspeedcap_min "nan"
+set g_physics_warsow_jumpspeedcap_max "nan"
+set g_physics_warsow_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_warsow_track_canjump 0
 set g_physics_warsow_stepdown 0
 
@@ -192,6 +204,9 @@ set g_physics_xdf_airstopaccelerate 2.5
 set g_physics_xdf_airstopaccelerate_full 0
 set g_physics_xdf_slickaccelerate 15
 set g_physics_xdf_doublejump 1
+set g_physics_xdf_jumpspeedcap_min 0
+set g_physics_xdf_jumpspeedcap_max 0.5
+set g_physics_xdf_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xdf_track_canjump 0
 set g_physics_xdf_stepdown 2
 
@@ -229,6 +244,9 @@ set g_physics_quake3_airstopaccelerate 0
 set g_physics_quake3_airstopaccelerate_full 0
 set g_physics_quake3_slickaccelerate 1
 set g_physics_quake3_doublejump 0
+set g_physics_quake3_jumpspeedcap_min 0
+set g_physics_quake3_jumpspeedcap_max 0
+set g_physics_quake3_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake3_track_canjump 1
 set g_physics_quake3_stepdown 0
 
@@ -266,6 +284,9 @@ set g_physics_cpma_airstopaccelerate 2.5
 set g_physics_cpma_airstopaccelerate_full 1
 set g_physics_cpma_slickaccelerate 15
 set g_physics_cpma_doublejump 0
+set g_physics_cpma_jumpspeedcap_min 0
+set g_physics_cpma_jumpspeedcap_max "nan"
+set g_physics_cpma_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_cpma_track_canjump 1
 set g_physics_cpma_stepdown 0
 
@@ -303,6 +324,9 @@ set g_physics_vecxis_airstopaccelerate 0
 set g_physics_vecxis_airstopaccelerate_full 0
 set g_physics_vecxis_slickaccelerate 5.5
 set g_physics_vecxis_doublejump 0
+set g_physics_vecxis_jumpspeedcap_min "nan"
+set g_physics_vecxis_jumpspeedcap_max "nan"
+set g_physics_vecxis_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_vecxis_track_canjump 0
 set g_physics_vecxis_stepdown 0
 
@@ -340,6 +364,9 @@ set g_physics_quake2_airstopaccelerate 0
 set g_physics_quake2_airstopaccelerate_full 0
 set g_physics_quake2_slickaccelerate 10
 set g_physics_quake2_doublejump 1
+set g_physics_quake2_jumpspeedcap_min "nan"
+set g_physics_quake2_jumpspeedcap_max "nan"
+set g_physics_quake2_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake2_track_canjump 1
 set g_physics_quake2_stepdown 0
 
@@ -377,6 +404,9 @@ set g_physics_bones_airstopaccelerate 2.5
 set g_physics_bones_airstopaccelerate_full 1
 set g_physics_bones_slickaccelerate 15
 set g_physics_bones_doublejump 0
+set g_physics_bones_jumpspeedcap_min "nan"
+set g_physics_bones_jumpspeedcap_max "nan"
+set g_physics_bones_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_bones_track_canjump 0
 set g_physics_bones_stepdown 2
 
@@ -414,5 +444,8 @@ set g_physics_overkill_airstopaccelerate 3
 set g_physics_overkill_airstopaccelerate_full 0
 set g_physics_overkill_slickaccelerate 15
 set g_physics_overkill_doublejump 0
+set g_physics_overkill_jumpspeedcap_min "nan"
+set g_physics_overkill_jumpspeedcap_max "nan"
+set g_physics_overkill_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_overkill_track_canjump 0
 set g_physics_overkill_stepdown 2
