--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -61,7 +61,7 @@ sv_friction_slick 0
 sv_doublejump 0
 // match the downhill ramp jumping behaviour of CPMA
 sv_jumpspeedcap_min 0
-sv_jumpspeedcap_max ""
+sv_jumpspeedcap_max "nan"
 // CPMA has ramp jumping
 sv_jumpspeedcap_max_disable_on_ramps 1
 g_teleport_maxspeed 400
