--- a/physicsLeeStricklin-ModdedFruit.cfg
+++ b/physicsLeeStricklin-ModdedFruit.cfg
@@ -44,7 +44,7 @@ sv_friction_on_land 0
 sv_friction_slick 8 // Nexuiz didn't have slick
 sv_doublejump 0 // TINY (1.35x normal) doublejumps only, can be disabled if wanted...
 sv_jumpspeedcap_min 0 // need predicting? (it should already be in CSQC prediction code)
-sv_jumpspeedcap_max ""
+sv_jumpspeedcap_max "nan"
 sv_jumpspeedcap_max_disable_on_ramps 1
 g_teleport_maxspeed 0
 g_teleport_minspeed 0
