--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -38,7 +38,7 @@ sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
 sv_friction_slick 9.6 // Nexuiz didn't have slick
 sv_doublejump 0
-sv_jumpspeedcap_min ""
+sv_jumpspeedcap_min "nan"
 sv_jumpspeedcap_max 0.38
 sv_jumpspeedcap_max_disable_on_ramps 0
 g_teleport_maxspeed 0
