--- a/physicsNexuiz10.cfg
+++ b/physicsNexuiz10.cfg
@@ -36,8 +36,8 @@ sv_friction_on_land 0.5
 sv_friction_slick 5 // Nexuiz didn't have slick
 sv_doublejump 0
 // 1.0 did not allow re-jumping due to a bug, this is quite close to it
-sv_jumpspeedcap_min ""
-sv_jumpspeedcap_max ""
+sv_jumpspeedcap_min "nan"
+sv_jumpspeedcap_max "nan"
 sv_jumpspeedcap_max_disable_on_ramps 0
 g_teleport_maxspeed 0
 g_teleport_minspeed 0
