--- a/physicsQBFplus.cfg
+++ b/physicsQBFplus.cfg
@@ -35,8 +35,8 @@ sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
 sv_friction_slick 5 // Quake didn't have slick
 sv_doublejump 0
-sv_jumpspeedcap_min ""
-sv_jumpspeedcap_max ""
+sv_jumpspeedcap_min "nan"
+sv_jumpspeedcap_max "nan"
 sv_jumpspeedcap_max_disable_on_ramps 0
 g_teleport_maxspeed 0
 g_teleport_minspeed 0
