--- a/physicsX07.cfg
+++ b/physicsX07.cfg
@@ -49,8 +49,8 @@ sv_warsowbunny_backtosideratio 0.8
 sv_friction_on_land 0
 sv_friction_slick 0.5
 sv_doublejump 0
-sv_jumpspeedcap_min ""
-sv_jumpspeedcap_max ""
+sv_jumpspeedcap_min "nan"
+sv_jumpspeedcap_max "nan"
 sv_jumpspeedcap_max_disable_on_ramps 1
 g_teleport_maxspeed 0
 g_teleport_minspeed 0
