--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -89,8 +89,8 @@ set sv_player_crouch_mins "-16 -16 -24" "mins of a crouched playermodel"
 set sv_player_crouch_maxs "16 16 25" "maxs of a crouched playermodel"
 
 set sv_doublejump 0 "allow Quake 2-style double jumps"
-set sv_jumpspeedcap_min "" "lower bound on the baseline velocity of a jump; final velocity will be >= (jumpheight * min + jumpheight)"
-set sv_jumpspeedcap_max "" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight)"
+set sv_jumpspeedcap_min "nan" "lower bound on the baseline velocity of a jump; final velocity will be >= (jumpheight * min + jumpheight); \"nan\" disables"
+set sv_jumpspeedcap_max "nan" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max_disable_on_ramps 0 "disable upper baseline velocity bound on ramps to preserve the old rampjump style"
 set sv_track_canjump 0 "track if the player released the jump key between 2 jumps to decide if they are able to jump or not"
 set sv_jumpvelocity_crouch 0 "jump height while crouching; \"0\" = regular jump height"
