Move server/client config detection from commands.cfg to xonotic-common.cfg

--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -44,6 +44,17 @@ set sv_master2 "dpm6.xonotic.xyz:27777"  // gazby, soylent_cow
 set sv_master3 "master3.xonotic.org:27950"
 set sv_master4 "master4.xonotic.org:42863"
 
+// create if_client and if_dedicated aliases that allow executing commands based on
+// whether it is a dedicated server or a client
+alias if_client "${* asis}"
+alias if_dedicated "${* asis}"
+alias _sv_dedicated_0 "alias if_dedicated \"\""
+alias _sv_dedicated_1 "alias if_client \"\""
+_sv_dedicated_${sv_dedicated}
+// these aliases are now useless, remove them
+unalias _sv_dedicated_0
+unalias _sv_dedicated_1
+
 // console RGB (including dedicated server, see sys_colortranslation) and GUI text appearance
 r_textbrightness 0.2
 r_textcontrast 0.8
