hud: Rename engineinfo framecounter cvars
Shortened names.
Improved associated cvar descriptions.
Cleaned up code a bit.

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -98,11 +98,11 @@ seta hud_panel_timer_warning_relative_yellow "3" "factor to multiply reference i
 seta hud_panel_timer_warning_red "60" "how many seconds before match end to turn timer red"
 seta hud_panel_timer_warning_yellow "300" "how many seconds before match end to turn timer yellow"
 
-seta hud_panel_engineinfo_framecounter_exponentialmovingaverage 1 "use an averaging method for calculating fps instead of counting frametime like engine does"
-seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_new_weight 0.1 "weight of latest data point"
-seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_instantupdate_change_threshold 0.5 "threshold for fps change when to update instantly, to make big fps changes update faster"
-seta hud_panel_engineinfo_framecounter_decimals "0" "amount of decimals to show"
-seta hud_panel_engineinfo_framecounter_time "0.1" "time between framerate display updates"
+seta hud_panel_engineinfo_fps_movingaverage 1 "use an averaging method for calculating FPS instead of counting frametime like the engine does"
+seta hud_panel_engineinfo_fps_movingaverage_weight 0.1 "FPS moving average weight given to the latest data point"
+seta hud_panel_engineinfo_fps_movingaverage_instantupdate_threshold 0.5 "threshold for FPS change when to update instantly, to make big FPS changes update faster"
+seta hud_panel_engineinfo_fps_decimals "0" "amount of FPS decimals to show"
+seta hud_panel_engineinfo_fps_time "0.1" "time between framerate display updates"
 
 seta hud_panel_physics_acceleration_movingaverage "1" "use an averaging method for calculating acceleration instead of the real value. lower (positive) values update the acceleration quicker"
 seta hud_panel_physics_acceleration_max_slick "-1" "acceleration progressbar gets completely filled up by this value (in g) while on slick; \"-1\" = same as the normal max"
