--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -744,12 +744,15 @@ alias posview_camera_info "prvm_globalget client view_origin _posview_tmpcvar1; 
 alias _posview_camera_info_2 "echo view_origin ^7\"$_posview_tmpcvar1\"; echo view_angles ^7\"$_posview_tmpcvar2\""
 
 // prints csqcplayer position and orientation
-// NOTE: for some reason .angles contains only yaw, .v_angles only pitch, .v_angle_old both
+// NOTE: _posview_merge_angles merges .angles and .v_angles since the former contains only yaw, the latter only pitch. Roll is not available.
+alias _posview_merge_angles "$1 \"$2 $6 0\""
 alias posview_csqcplayer_info "prvm_globalget client csqcplayer _posview_tmpcvar1; _posview_csqcplayer_info2"
-alias _posview_csqcplayer_info2 "prvm_edictget client $_posview_tmpcvar1 origin _posview_tmpcvar1; prvm_edictget client $_posview_tmpcvar1 v_angle_old _posview_tmpcvar2; _posview_csqcplayer_info3"
-alias _posview_csqcplayer_info3 "echo csqcplayer origin ^7\"$_posview_tmpcvar1\"; echo csqcplayer angles ^7\"$_posview_tmpcvar2\""
+alias _posview_csqcplayer_info2 "prvm_edictget client $_posview_tmpcvar1 v_angle _posview_tmpcvar2; prvm_edictget client $_posview_tmpcvar1 angles _posview_tmpcvar3; _posview_csqcplayer_info3"
+alias _posview_csqcplayer_info3 "prvm_edictget client $_posview_tmpcvar1 origin _posview_tmpcvar1; _posview_merge_angles _posview_tmpcvar2 $_posview_tmpcvar2 $_posview_tmpcvar3; _posview_csqcplayer_info4"
+alias _posview_csqcplayer_info4 "echo csqcplayer origin ^7\"$_posview_tmpcvar1\"; echo csqcplayer angles ^7\"$_posview_tmpcvar2\""
 set _posview_tmpcvar1 "0"
 set _posview_tmpcvar2 "0"
+set _posview_tmpcvar3 "0"
 
 // Demo camera
 set camera_enable 		0	"enables the camera for demo playback"
