cvars: Make descriptions start with a capital
Edited qcsrc/tools/cvar-standardize.sh, re-ran it to update all .cfgs.
To some extent this is personal preference, but using an uppercase letter is better for those using en (en_US) as the cvar descriptions are visible in the Advanced settings menu.
This also means the script will be triggered less, and leads to less usage of // script-ignore.
Manually removed some // script-ignores that weren't necessary anymore.

--- a/balance-nexuiz25.cfg
+++ b/balance-nexuiz25.cfg
@@ -8,11 +8,11 @@ set g_balance_health_start 150
 set g_start_ammo_shells 40
 set g_random_start_rockets 15
 set g_random_start_cells 25
-set g_warmup_start_health 250 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_shells 50 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_nails 150 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_rockets 50 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_cells 50 "starting values when being in warmup-stage"
+set g_warmup_start_health 250 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_shells 50 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_nails 150 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_rockets 50 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_cells 50 "Starting values when being in warmup-stage"
 set g_ca_start_health 250
 set g_ca_start_armor 100
 set g_ca_start_ammo_shells 50
@@ -126,7 +126,7 @@ set g_balance_powerup_strength_force 4
 // }}}
 
 // {{{ jetpack/hook
-set g_jetpack_maxspeed_side 1500 "max speed of the Jetpack in the XY direction"
+set g_jetpack_maxspeed_side 1500 "Max speed of the Jetpack in the XY direction"
 
 set g_balance_grapplehook_health 130
 set g_balance_grapplehook_damagedbycontents 0
