--- a/balance-xonotic.cfg
+++ b/balance-xonotic.cfg
@@ -33,13 +33,13 @@ set g_random_start_shells 15
 set g_random_start_bullets 80
 set g_random_start_rockets 40
 set g_random_start_cells 30
-set g_warmup_start_health 100 "starting values when being in warmup-stage"
-set g_warmup_start_armor 100 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_shells 30 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_nails 160 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_rockets 80 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_cells 90 "starting values when being in warmup-stage"
-set g_warmup_start_ammo_fuel 0 "starting values when being in warmup-stage"
+set g_warmup_start_health 100 "Starting values when being in warmup-stage"
+set g_warmup_start_armor 100 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_shells 30 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_nails 160 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_rockets 80 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_cells 90 "Starting values when being in warmup-stage"
+set g_warmup_start_ammo_fuel 0 "Starting values when being in warmup-stage"
 set g_ca_start_health 200
 set g_ca_start_armor 200
 set g_ca_start_ammo_shells 60
@@ -176,7 +176,7 @@ set g_balance_armor_regenstable 100
 set g_balance_armor_rotstable 100
 set g_balance_armor_limit 200
 set g_balance_armor_blockpercent 0.7
-set g_balance_fuel_regen 0.1 "fuel regeneration (only applies if the player owns IT_FUEL_REGEN)"
+set g_balance_fuel_regen 0.1 "Fuel regeneration (only applies if the player owns IT_FUEL_REGEN)"
 set g_balance_fuel_regenlinear 0
 set g_balance_pause_fuel_regen 2 // other than this, fuel uses the health regen counter
 set g_balance_fuel_rot 0.05
@@ -190,11 +190,11 @@ set g_balance_fuel_limit 100
 
 // {{{ misc
 set g_balance_selfdamagepercent 0.65
-set g_weaponspeedfactor 1 "weapon projectile speed multiplier"
-set g_weaponratefactor 1 "weapon fire rate multiplier"
-set g_weapondamagefactor 1 "weapon damage multiplier"
-set g_weaponforcefactor 1 "weapon force multiplier"
-set g_weaponspreadfactor 1 "weapon spread multiplier"
+set g_weaponspeedfactor 1 "Weapon projectile speed multiplier"
+set g_weaponratefactor 1 "Weapon fire rate multiplier"
+set g_weapondamagefactor 1 "Weapon damage multiplier"
+set g_weaponforcefactor 1 "Weapon force multiplier"
+set g_weaponspreadfactor 1 "Weapon spread multiplier"
 set g_balance_firetransfer_time 0.9
 set g_balance_firetransfer_damage 0.8
 set g_throughfloor_damage 0.75
@@ -213,15 +213,15 @@ set g_balance_falldamage_factor 0.20
 set g_balance_falldamage_maxdamage 40
 set g_balance_falldamage_onlyvertical 0
 set g_balance_damagepush_speedfactor 2.5
-set g_balance_contents_damagerate 0.2 "ticrate interval for applying damage with playerdamage/projectiledamage cvars"
-set g_balance_contents_drowndelay 10 "time under water before a player begins drowning"
-set g_balance_contents_playerdamage_drowning 20 "damage per second for while player is drowning"
-set g_balance_contents_playerdamage_lava 50 "damage per second for while player is inside lava"
-set g_balance_contents_playerdamage_lava_burn 0 "extra burning damage after leaving lava"
-set g_balance_contents_playerdamage_lava_burn_time 2.5 "time across which the damage is applied (NOTE: not dps!)"
-set g_balance_contents_playerdamage_slime 30 "damage per second for while player is inside slime"
-set g_balance_contents_projectiledamage 10000 "damage taken by projectiles upon touching lava/slime (if enabled by g_projectiles_damage)"
-set g_maxpushtime 8.0 "timeout for kill credit when your damage knocks someone into a death trap"
+set g_balance_contents_damagerate 0.2 "Ticrate interval for applying damage with playerdamage/projectiledamage cvars"
+set g_balance_contents_drowndelay 10 "Time under water before a player begins drowning"
+set g_balance_contents_playerdamage_drowning 20 "Damage per second for while player is drowning"
+set g_balance_contents_playerdamage_lava 50 "Damage per second for while player is inside lava"
+set g_balance_contents_playerdamage_lava_burn 0 "Extra burning damage after leaving lava"
+set g_balance_contents_playerdamage_lava_burn_time 2.5 "Time across which the damage is applied (NOTE: not dps!)"
+set g_balance_contents_playerdamage_slime 30 "Damage per second for while player is inside slime"
+set g_balance_contents_projectiledamage 10000 "Damage taken by projectiles upon touching lava/slime (if enabled by g_projectiles_damage)"
+set g_maxpushtime 8.0 "Timeout for kill credit when your damage knocks someone into a death trap"
 // }}}
 
 // {{{ powerups
@@ -242,13 +242,13 @@ set g_balance_superweapons_time 30
 // }}}
 
 // {{{ jetpack/hook
-set g_jetpack_antigravity 0.8 "factor of gravity compensation of the Jetpack"
-set g_jetpack_acceleration_side 1200 "acceleration of the Jetpack in the XY direction"
-set g_jetpack_acceleration_up 600 "acceleration of the Jetpack in the Z direction (NOTE: you have to factor in gravity here, if antigravity is not \"1\")"
-set g_jetpack_maxspeed_side 1200 "max speed of the Jetpack in the XY direction"
-set g_jetpack_maxspeed_up 600 "max speed of the Jetpack in the Z direction"
-set g_jetpack_fuel 8 "fuel per second for Jetpack"
-set g_jetpack_reverse_thrust 0 "if not \"0\", downward acceleration when crouching with the Jetpack"
+set g_jetpack_antigravity 0.8 "Factor of gravity compensation of the Jetpack"
+set g_jetpack_acceleration_side 1200 "Acceleration of the Jetpack in the XY direction"
+set g_jetpack_acceleration_up 600 "Acceleration of the Jetpack in the Z direction (NOTE: you have to factor in gravity here, if antigravity is not \"1\")"
+set g_jetpack_maxspeed_side 1200 "Max speed of the Jetpack in the XY direction"
+set g_jetpack_maxspeed_up 600 "Max speed of the Jetpack in the Z direction"
+set g_jetpack_fuel 8 "Fuel per second for Jetpack"
+set g_jetpack_reverse_thrust 0 "If not \"0\", downward acceleration when crouching with the Jetpack"
 
 set g_grappling_hook_tarzan 2 // 2: can also pull players
 set g_balance_grapplehook_speed_fly 1800
