--- a/commands.cfg
+++ b/commands.cfg
@@ -138,7 +138,7 @@ alias radar "qc_cmd_cl hud radar ${* ?}"
 alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
 
-seta team_selection_type 1 "team selection type; \"0\" = menu, \"1\" = scoreboard"
+seta team_selection_type 1 "Team selection type; \"0\" = menu, \"1\" = scoreboard"
 set _scoreboard_team_selection_available 0 // set to 1 by CSQC
 alias _team_selection_show00 "menu_cmd directmenu TeamSelect"
 alias _team_selection_show01 "menu_cmd directmenu TeamSelect"
@@ -152,10 +152,10 @@ alias menu_showteamselect team_selection_show
 // ========================================================
 //  cmd (client-to-server command) - server/command/cmd.qc
 // ========================================================
-set sv_clientcommand_antispam_time 1 "amount of seconds after a command before another command can be called again without being considered spam; \"-1\" = no limit"
-set sv_clientcommand_antispam_count 8 "amount of commands considered spam before commands are rejected"
-seta sv_status_privacy 1 "hide IP addresses from \"status\" and \"who\" replies shown to clients"
-seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they are better than what you are carrying (NOTE: see also cl_autoswitch_cts)"
+set sv_clientcommand_antispam_time 1 "Amount of seconds after a command before another command can be called again without being considered spam; \"-1\" = no limit"
+set sv_clientcommand_antispam_count 8 "Amount of commands considered spam before commands are rejected"
+seta sv_status_privacy 1 "Hide IP addresses from \"status\" and \"who\" replies shown to clients"
+seta cl_autoswitch 1 "Automatically switch to newly picked up weapons if they are better than what you are carrying (NOTE: see also cl_autoswitch_cts)"
 
 // commented out commands are really only intended for internal use, or already have declaration in the engine
 alias autoswitch           "qc_cmd_cmd    autoswitch           ${* ?}" // Whether or not to switch automatically when getting a better weapon
@@ -240,7 +240,7 @@ alias unlockteams          "qc_cmd_sv     unlockteams          ${* ?}" // Enable
 alias warp                 "qc_cmd_sv     warp                 ${* ?}" // Choose different level in campaign
 
 // other aliases for server commands
-set _endmatch 0 "if set to \"1\" ends the match immediately; use instead of timelimit -1 (deprecated)"
+set _endmatch 0 "If set to \"1\" ends the match immediately; Use instead of timelimit -1 (deprecated)"
 alias endmatch "_endmatch 1"
 alias bots "minplayers 4; minplayers_per_team 2"
 alias nobots "minplayers 0; minplayers_per_team 0"
@@ -354,26 +354,26 @@ set sv_vote_command_help_gotomap "\nUsage:^3 vcall gotomap mapname\n^7  Where 'm
 // =================================
 //  voting - server/command/vote.qc
 // =================================
-set sv_vote_call 1 "allow users to call a vote for the commands in sv_vote_commands"
-set sv_vote_change 1 "allow voters to change their mind after already voting"
-set sv_vote_commands "restart fraglimit gotomap nextmap endmatch reducematchtime extendmatchtime allready resetmatch kick cointoss movetoauto shuffleteams bots nobots" "these commands can be voted by players or used directly by masters (vdo) in addition to sv_vote_master_commands"
+set sv_vote_call 1 "Allow users to call a vote for the commands in sv_vote_commands"
+set sv_vote_change 1 "Allow voters to change their mind after already voting"
+set sv_vote_commands "restart fraglimit gotomap nextmap endmatch reducematchtime extendmatchtime allready resetmatch kick cointoss movetoauto shuffleteams bots nobots" "These commands can be voted by players or used directly by masters (vdo) in addition to sv_vote_master_commands"
 set sv_vote_only_commands ""
-set sv_vote_limit 160 "maximum allowed length of a vote command"
-set sv_vote_master_commands "movetored movetoblue movetoyellow movetopink movetospec" "extra commands which vote masters can execute by themselves, along with the normal sv_vote_commands" // maybe add kickban here (but then sv_vote_master 0)
-set sv_vote_master 0	"allows the use of the vote master system"
-set sv_vote_master_callable 0 "when set, users can use \"vmaster\" to call a vote to become master of voting commands"
-set sv_vote_master_ids "" "space-separated list of player IDs (signed public key fingerprints) which will be logged in as master automatically"
-set sv_vote_master_password "" "when set, users can use \"vlogin PASSWORD\" to log in as master, then run master commands directly using vdo"
-set sv_vote_master_playerlimit 2 "minimum number of players needed for a player to be allowed to vote for master"
-set sv_vote_no_stops_vote 1 "allow the vote caller to stop their own vote simply by voting no"
-set sv_vote_singlecount 0	"set to \"1\" to count votes once after timeout or to \"0\" to count with every vote"
+set sv_vote_limit 160 "Maximum allowed length of a vote command"
+set sv_vote_master_commands "movetored movetoblue movetoyellow movetopink movetospec" "Extra commands which vote masters can execute by themselves, along with the normal sv_vote_commands" // maybe add kickban here (but then sv_vote_master 0)
+set sv_vote_master 0	"Allows the use of the vote master system"
+set sv_vote_master_callable 0 "When set, users can use \"vmaster\" to call a vote to become master of voting commands"
+set sv_vote_master_ids "" "Space-separated list of player IDs (signed public key fingerprints) which will be logged in as master automatically"
+set sv_vote_master_password "" "When set, users can use \"vlogin PASSWORD\" to log in as master, then run master commands directly using vdo"
+set sv_vote_master_playerlimit 2 "Minimum number of players needed for a player to be allowed to vote for master"
+set sv_vote_no_stops_vote 1 "Allow the vote caller to stop their own vote simply by voting no"
+set sv_vote_singlecount 0	"Set to \"1\" to count votes once after timeout or to \"0\" to count with every vote"
 set sv_vote_timeout 24	"a vote will timeout after this many seconds"
 set sv_vote_wait 120	"a player can not call a vote again for this many seconds when their vote was not accepted"
-set sv_vote_stop 15	"a player can not call a vote again for this many seconds when they stopped this vote (e.g. to correct it)"
-set sv_vote_majority_factor 0.5	"what percentage of the PLAYERS constitute a majority? (must be at least 0.5, recommended \"0.5\")"
-set sv_vote_majority_factor_of_voted 0.5 "what percentage of the VOTERS constitute a majority too? (must be at least 0.5, recommended \"0.5\")"
-set sv_vote_gamestart 0 "allow voting during map change"
-set sv_vote_debug 0 "count votes by bots too for debugging purposes (to get a bot to vote exec this command : bot_cmd 1 cc vote yes)"
+set sv_vote_stop 15	"a player can not call a vote again for this many seconds when they stopped this vote (e.g. To correct it)"
+set sv_vote_majority_factor 0.5	"What percentage of the PLAYERS constitute a majority? (must be at least 0.5, recommended \"0.5\")"
+set sv_vote_majority_factor_of_voted 0.5 "What percentage of the VOTERS constitute a majority too? (must be at least 0.5, recommended \"0.5\")"
+set sv_vote_gamestart 0 "Allow voting during map change"
+set sv_vote_debug 0 "Count votes by bots too for debugging purposes (to get a bot to vote exec this command : bot_cmd 1 cc vote yes)"
 // when disabled, don't allow gametype changes "note: set these two equal to JUST support simple majorities"
 set sv_vote_override_mostrecent 0
 
