--- a/help.cfg
+++ b/help.cfg
@@ -10,9 +10,9 @@
 // for manual use: help_inc switches to the next message, help_doit will print the current message, help_next will do both together
 
 // settings
-set help_cfg_nick "^2Help System^3" "the messages will appear in chat coming from the sever using this name"
-set help_cfg_time 5 "the time between two messages in seconds when started using help_loop"
-set help_cfg_prefix "^2" "prepended to each message, useful to color the nick and message differently"
+set help_cfg_nick "^2Help System^3" "The messages will appear in chat coming from the sever using this name"
+set help_cfg_time 5 "The time between two messages in seconds when started using help_loop"
+set help_cfg_prefix "^2" "Prepended to each message, useful to color the nick and message differently"
 
 // aliases making up the actual helpsystem
 set help_tmp_index -1 // -1 since we first increment, then show it
