--- a/turrets.cfg
+++ b/turrets.cfg
@@ -2,9 +2,9 @@ set g_turrets 1
 set g_turrets_reloadcvars 0
 set g_turrets_nofire 0
 
-set g_turrets_targetscan_mindelay 0.1 "delay target rescanning to lower resource usage"
-set g_turrets_targetscan_maxdelay 1 "scan at least this often"
-set g_turrets_aimidle_delay 5 "become idle if target is lost for this long"
+set g_turrets_targetscan_mindelay 0.1 "Delay target rescanning to lower resource usage"
+set g_turrets_targetscan_maxdelay 1 "Scan at least this often"
+set g_turrets_aimidle_delay 5 "Become idle if target is lost for this long"
 
 alias g_turrets_reload "set g_turrets_reloadcvars 1"
 
