--- a/vehicles.cfg
+++ b/vehicles.cfg
@@ -1,12 +1,12 @@
 set g_vehicles 1
 
-set g_vehicles_enter 0 "require pressing use key to enter a vehicle"
+set g_vehicles_enter 0 "Require pressing use key to enter a vehicle"
 set g_vehicles_enter_radius 250
-set g_vehicles_steal 1 "allow stealing enemy vehicles in teamplay modes"
-set g_vehicles_steal_show_waypoint 1 "show a waypoint above the thief"
+set g_vehicles_steal 1 "Allow stealing enemy vehicles in teamplay modes"
+set g_vehicles_steal_show_waypoint 1 "Show a waypoint above the thief"
 set g_vehicles_delayspawn 1
 set g_vehicles_delayspawn_jitter 10
-set g_vehicles_teams 1 "allow team specific vehicles"
+set g_vehicles_teams 1 "Allow team specific vehicles"
 
 set g_vehicles_teleportable 0
 set g_vehicles_crush_dmg 70
@@ -101,7 +101,7 @@ set g_vehicle_racer_respawntime 35
 set g_vehicle_racer_thinkrate 0.05 // TODO: any higher causes it to sink in liquids
 
 set g_vehicle_racer_speed_afterburn 3000
-set g_vehicle_racer_afterburn_cost 130 "energy consumed per second"
+set g_vehicle_racer_afterburn_cost 130 "Energy consumed per second"
 
 set g_vehicle_racer_waterburn_cost 5
 set g_vehicle_racer_waterburn_speed 750
@@ -126,7 +126,7 @@ set g_vehicle_racer_friction 0.45
 set g_vehicle_racer_water_time 5
 
 set g_vehicle_racer_hovertype 0 "\"0\" = hover, otherwise maglev"
-set g_vehicle_racer_hoverpower 8000 "this is multiplied by 4 for the 4 engines"
+set g_vehicle_racer_hoverpower 8000 "This is multiplied by 4 for the 4 engines"
 
 set g_vehicle_racer_turnroll 30
 set g_vehicle_racer_turnspeed 220
@@ -154,8 +154,8 @@ set g_vehicle_racer_blowup_coredamage 250
 set g_vehicle_racer_blowup_edgedamage 15
 set g_vehicle_racer_blowup_forceintensity 250
 
-set g_vehicle_racer_bouncefactor 0.25 "factor of old velocity to keep after collision"
-set g_vehicle_racer_bouncestop 0 "if not 0, new velocity after bounce is 0 if new velocity is smaller than this"
+set g_vehicle_racer_bouncefactor 0.25 "Factor of old velocity to keep after collision"
+set g_vehicle_racer_bouncestop 0 "If not 0, new velocity after bounce is 0 if new velocity is smaller than this"
 set g_vehicle_racer_bouncepain "200 0.15 150" "minspeed_for_pain speedchange_to_pain_factor max_damage"
 
 set g_vehicle_racer_cannon_cost 1.5
