--- a/crosshairs.cfg
+++ b/crosshairs.cfg
@@ -14,11 +14,11 @@ seta crosshair_dot 0
 seta crosshair_dot_alpha 1
 seta crosshair_dot_size 0.6
 seta crosshair_dot_color "1 0 0"
-seta crosshair_dot_color_custom 1 "use a custom color for the crosshair dot"
+seta crosshair_dot_color_custom 1 "Use a custom color for the crosshair dot"
 
 // smooth transitions for crosshair changes
-seta crosshair_effect_time 0.4 "how fast (in seconds) some crosshair effects should take place; \"0\" = instant"
-seta crosshair_effect_scalefade 1 "use scaling and fading for crosshair effects"
+seta crosshair_effect_time 0.4 "How fast (in seconds) some crosshair effects should take place; \"0\" = instant"
+seta crosshair_effect_scalefade 1 "Use scaling and fading for crosshair effects"
 
 // item pickup animation settings
 seta crosshair_pickup 0.25
@@ -31,25 +31,25 @@ seta crosshair_hitindication_per_weapon_color "10 10 10"
 seta crosshair_hitindication_speed 5
 
 // hit testing/tracing for special effects for the crosshair
-seta crosshair_hittest 1 "do a crosshair hit evaluation, applying effects from the _blur and _scale cvars"
-seta crosshair_hittest_blur_teammate 0 "blur the crosshair if the shot is obstructed by a teammate"
-seta crosshair_hittest_blur_wall 1 "blur the crosshair if the shot is obstructed by a wall or object"
-seta crosshair_hittest_showimpact 0 "move the crosshair to the actual impact location if obstructed (NOTE: debug setting, very glitchy!)"
+seta crosshair_hittest 1 "Do a crosshair hit evaluation, applying effects from the _blur and _scale cvars"
+seta crosshair_hittest_blur_teammate 0 "Blur the crosshair if the shot is obstructed by a teammate"
+seta crosshair_hittest_blur_wall 1 "Blur the crosshair if the shot is obstructed by a wall or object"
+seta crosshair_hittest_showimpact 0 "Move the crosshair to the actual impact location if obstructed (NOTE: debug setting, very glitchy!)"
 
 // change color based on special case
-seta crosshair_color_special 1 "apply a special color for the crosshair; \"1\" = weapon color (see also crosshair_per_weapon), \"2\" = a color based on health and armor, \"3\" = rainbow/random color"
+seta crosshair_color_special 1 "Apply a special color for the crosshair; \"1\" = weapon color (see also crosshair_per_weapon), \"2\" = a color based on health and armor, \"3\" = rainbow/random color"
 seta crosshair_color_special_rainbow_delay 0.1
-seta crosshair_color_special_rainbow_brightness 20 "color brightness of the random crosshair colors"
+seta crosshair_color_special_rainbow_brightness 20 "Color brightness of the random crosshair colors"
 
 // per-weapon crosshairs
-seta crosshair_per_weapon 1	"when \"1\", each gun will display a different crosshair"
+seta crosshair_per_weapon 1	"When \"1\", each gun will display a different crosshair"
 
 // side-scrolling crosshair
-seta crosshair_2d 54 "selects crosshair to use in side-scrolling mode (\"\" uses regular crosshair and \"0\" is none)"
+seta crosshair_2d 54 "Selects crosshair to use in side-scrolling mode (\"\" uses regular crosshair and \"0\" is none)"
 
 // third person chase-camera crosshair
-seta crosshair_chase 1 "adjust the crosshair while in third person mode to where the shot will actually hit"
-seta crosshair_chase_playeralpha 0.25 "opacity of the player while they obstruct the view when crosshair_chase is enabled, can be a value between 0 and 1"
+seta crosshair_chase 1 "Adjust the crosshair while in third person mode to where the shot will actually hit"
+seta crosshair_chase_playeralpha 0.25 "Opacity of the player while they obstruct the view when crosshair_chase is enabled, can be a value between 0 and 1"
 
 
 // =========================
@@ -57,13 +57,13 @@ seta crosshair_chase_playeralpha 0.25 "opacity of the player while they obstruct
 // =========================
 
 // ring around crosshair, used for various purposes (such as indicating bullets left in clip, Vortex charge)
-seta crosshair_ring 1 "enable normal crosshair rings"
-seta crosshair_ring_inner 0 "allow inner rings to be drawn too"
-seta crosshair_ring_size 2	"ring size"
-seta crosshair_ring_alpha 0.2	"ring alpha"
+seta crosshair_ring 1 "Enable normal crosshair rings"
+seta crosshair_ring_inner 0 "Allow inner rings to be drawn too"
+seta crosshair_ring_size 2	"Ring size"
+seta crosshair_ring_alpha 0.2	"Ring alpha"
 
 // Vortex ring // WEAPONTODO: Make this part of the crosshair line in REGISTER_WEAPON
-seta crosshair_ring_vortex 1 "draw a ring showing the current charge of the Vortex"
+seta crosshair_ring_vortex 1 "Draw a ring showing the current charge of the Vortex"
 seta crosshair_ring_vortex_alpha 0.15
 seta crosshair_ring_vortex_inner_alpha 0.15
 seta crosshair_ring_vortex_inner_color_red 0.8
@@ -73,20 +73,20 @@ seta crosshair_ring_vortex_currentcharge_scale 30
 seta crosshair_ring_vortex_currentcharge_movingavg_rate 0.05
 
 // Mine Layer ring
-seta crosshair_ring_minelayer 1 "draw a ring showing the current amount of layed mines"
+seta crosshair_ring_minelayer 1 "Draw a ring showing the current amount of layed mines"
 seta crosshair_ring_minelayer_alpha 0.15
 
 // Hagar ring
-seta crosshair_ring_hagar 1 "draw a ring showing the current charge of the Hagar"
+seta crosshair_ring_hagar 1 "Draw a ring showing the current charge of the Hagar"
 seta crosshair_ring_hagar_alpha 0.15
 
 // Arc ring
-seta crosshair_ring_arc 1 "draw a ring showing Arc's overheating"
+seta crosshair_ring_arc 1 "Draw a ring showing Arc's overheating"
 seta crosshair_ring_arc_hot_color "1 0 0"
 seta crosshair_ring_arc_cold_alpha 0.2
 seta crosshair_ring_arc_hot_alpha 0.5
 
 // reload ring
-seta crosshair_ring_reload 1 "enable ammo crosshair rings"
-seta crosshair_ring_reload_size 2.5	"reload ring size"
-seta crosshair_ring_reload_alpha 0.2	"reload ring alpha"
+seta crosshair_ring_reload 1 "Enable ammo crosshair rings"
+seta crosshair_ring_reload_size 2.5	"Reload ring size"
+seta crosshair_ring_reload_alpha 0.2	"Reload ring alpha"
