--- a/physics.cfg
+++ b/physics.cfg
@@ -6,9 +6,9 @@
 // ==============
 //  Main options
 // ==============
-set g_physics_clientselect 0 "allow clients to select their physics set"
+set g_physics_clientselect 0 "Allow clients to select their physics set"
 set g_physics_clientselect_options "xonotic nexuiz quake warsow defrag quake3 vecxis quake2 bones"
-set g_physics_clientselect_default "" "override default physics"
+set g_physics_clientselect_default "" "Override default physics"
 
 // =========
 //  Xonotic
@@ -49,8 +49,8 @@ set g_physics_nexuiz_airaccel_qw 0.95
 set g_physics_nexuiz_airstrafeaccel_qw 0
 set g_physics_nexuiz_airspeedlimit_nonqw 0
 set g_physics_nexuiz_maxspeed 400
-set g_physics_nexuiz_jumpvelocity 300 "use \"333\" to match Xonotic physics"
-set g_physics_nexuiz_jumpvelocity_crouch 0 "use \"333\" to match Xonotic physics"
+set g_physics_nexuiz_jumpvelocity 300 "Use \"333\" to match Xonotic physics"
+set g_physics_nexuiz_jumpvelocity_crouch 0 "Use \"333\" to match Xonotic physics"
 set g_physics_nexuiz_maxairstrafespeed 0
 set g_physics_nexuiz_maxairspeed 220
 set g_physics_nexuiz_airstrafeaccelerate 0
@@ -209,8 +209,8 @@ set g_physics_vecxis_airaccel_qw 0.93
 set g_physics_vecxis_airstrafeaccel_qw 0
 set g_physics_vecxis_airspeedlimit_nonqw 0
 set g_physics_vecxis_maxspeed 400
-set g_physics_vecxis_jumpvelocity 300 "use \"333\" to match Xonotic physics"
-set g_physics_vecxis_jumpvelocity_crouch 0 "use \"333\" to match Xonotic physics"
+set g_physics_vecxis_jumpvelocity 300 "Use \"333\" to match Xonotic physics"
+set g_physics_vecxis_jumpvelocity_crouch 0 "Use \"333\" to match Xonotic physics"
 set g_physics_vecxis_maxairstrafespeed 0
 set g_physics_vecxis_maxairspeed 220
 set g_physics_vecxis_airstrafeaccelerate 0
