Add a new option to make flags remain at base when collected

--- a/gametypes-server.cfg
+++ b/gametypes-server.cfg
@@ -286,6 +286,7 @@ set g_ctf_flag_return_dropped 100 "automatically return the flag to base if drop
 set g_ctf_flag_return_damage 0 "allow the flag to be damaged when dropped, reducing time needed to automatically return to base; initial health is defined by g_ctf_flag_health"
 set g_ctf_flag_return_damage_delay 0 "how much time the flag takes to automatically return to base if it falls into lava/slime/trigger hurt"
 set g_ctf_flag_return_when_unreachable 1 "automatically return the flag if it falls into lava/slime/trigger hurt"
+set g_ctf_flag_stay 0 "flags remain at base when collected, allowing multiple players to carry and capture flags"
 set g_ctf_flag_waypoint 1 "show a waypoint at the flag for easy discovery and directions"
 set g_ctf_flag_waypoint_maxdistance 0 "maximum distance from a flag from which their waypoint is shown; \"0\" = no limit"
 set g_ctf_flagcarrier_auto_helpme_damage 100 "automatically place a helpme notification on flag carrier waypointsprite if they get hit and their health dips below this value"
