scoreboard: Add hud_panel_scoreboard_minimal cvar
Enabling the cvar merges the accuracy & item stats tables and hides some headers, to make the scoreboard smaller and more minimal.
Not all the changes are entirely intuitive, and arguably aren't necessarily an improvement, so the cvar is disabled by default.
A lot of this diff was from merging Scoreboard_AccuracyStats_Draw and Scoreboard_ItemStats_Draw into Scoreboard_AccuracyAndItemStats_Draw, which is necessary.
Added the cvar to the HUD skin files, since it aesthetically changes the HUD.

--- a/hud_luminos_minimal.cfg
+++ b/hud_luminos_minimal.cfg
@@ -385,6 +385,7 @@ seta hud_panel_scoreboard_bg_teams_color_team "0.7"
 seta hud_panel_scoreboard_accuracy_doublerows "1"
 seta hud_panel_scoreboard_accuracy_nocolors "0"
 seta hud_panel_scoreboard_itemstats_doublerows "0"
+seta hud_panel_scoreboard_minimal "0"
 
 seta hud_panel_strafehud_pos "0.38 0.55"
 seta hud_panel_strafehud_size "0.24 0.025"
