--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -384,6 +384,7 @@ seta hud_panel_scoreboard_bg_teams_color_team "" "override panel team color in t
 seta hud_panel_scoreboard_accuracy_doublerows "" "use two rows instead of one"
 seta hud_panel_scoreboard_accuracy_nocolors "" "don't use colors displaying accuracy stats"
 seta hud_panel_scoreboard_itemstats_doublerows "" "use two rows instead of one"
+seta hud_panel_scoreboard_minimal "" "enable a minimal version of the scoreboard, with some merged tables and less headers"
 
 seta hud_panel_strafehud_pos "" "position of this base of the panel"
 seta hud_panel_strafehud_size "" "size of this panel"
