--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -385,6 +385,7 @@ seta hud_panel_scoreboard_bg_teams_color_team "0"
 seta hud_panel_scoreboard_accuracy_doublerows "0"
 seta hud_panel_scoreboard_accuracy_nocolors "0"
 seta hud_panel_scoreboard_itemstats_doublerows "0"
+seta hud_panel_scoreboard_minimal "0"
 
 seta hud_panel_strafehud_pos "0.32 0.57"
 seta hud_panel_strafehud_size "0.36 0.02"
