hud: Improve Survival modicons, networking, spec experience
Fixed issues with the Survival modicons panel not displaying when it should be able to (spectating a player, including while INGAME).
Previously the status of players wasn't known to spectators in Survival.
- This information should be shown, so spectators can see what the player is seeing.
- Spectators can't join until the next round, so can't cheat with this information.
- Added cl_survival_reveal cvar, so players can choose to not be spoiled while spectating.
    - Added this cvar to the modicons hudpanel menu dialog.
Rewrote the Survival networking code.
- Relocated the REGISTER_NET_LINKED to the header, and shortened its name.
Relocated the Survival color constants into cl_survival.qc since that was the only place they were used.
Renamed .survival_status to .gametype_status in CSQC so it can be more easily shared between gametypes.
Rewrote much of and cleaned up cl_survival.qc.
Changed the "Hunter" and "Survival" text to use a slightly brighter color, essentially copied from qcsrc/common/teams.qh.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -739,6 +739,8 @@ seta cl_race_checkpoint_splits_console 1 "print race checkpoint splits to consol
 
 seta cl_autoswitch_cts -1 "\"-1\" = fallback to the behavior of cl_autoswitch, \"0\" = never autoswitch in CTS, \"1\" = always autoswitch in CTS (regardless of weapon priority)"
 
+seta cl_survival_reveal 1 "reveal the Survival status of the player you're spectating"
+
 set cl_stripcolorcodes 0	"experimental feature (NOTE: strips ALL color codes from messages!)"
 
 // prints view position and orientation
