hud: Add Onslaught modicons panel
Created a new Onslaught modicons panel.
- Shows text of how many controlpoints + generators a team has, text becomes greyed when it's 0 (team eliminated).
- When there's only 2 teams and the panel is sufficiently tall or wide, a two-team bar displays the map control each team has.
    - This is calculated as the number of half-links a team owns, e.g. owning a controlpoint and one it's linked to gives 1, while owning a controlpoint but not one it's linked to gives only 0.5 on that link.
    - Chose to do this rather than the number of controlpoints + generators, since some controlpoints have more impact than others, via unlocking more links.
    - This information was already networked to the client in ENT_CLIENT_RADARLINK and stored in g_radarlinks, just needed to add a function to the end of the NET_HANDLE to update Onslaught's cache.
    - Two-team bar draws each team's progress with a gradient, and updates smoothly, reusing HUD_Mod_SmoothlyUpdateCachedValue added in the Domination commit.
Added a new hud_panel_modicons_ons_layout cvar, which controls which direction the two-team bar gradient heads in.
Used entity networking with a new handle ENT_CLIENT_ONS_STATUSES to network the controlpoints + generators, and which teams still have a generator remaining.
- This could maybe be done instead utilizing ENT_CLIENT_CONTROLPOINT_ICON and ENT_CLIENT_GENERATOR, but if possible would be tricky to handle these entities being culled from the client.
- This can't be done using g_radaricons, since those icons are only created for controlpoints owned by a team or connected to one owned by a team.
Added NUM_TEAM_WORDS and NUM_TEAM_BYTES to common/teams.qh, which are equal to ceil(NUM_TEAMS / 24) and ceil(NUM_TEAMS / 8) respectively.
- These are needed since functions (ceil) can't be called in a global scope.
- They're used when networking which teams have an alive generator -- NUM_TEAM number of bits need to be networked (ideally with WriteByt

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -210,6 +210,7 @@ seta hud_panel_modicons_bg_padding "" "if set to something else than \"\" = over
 seta hud_panel_modicons_ca_layout "" "2 possible layouts, active in Clan Arena; \"0\" = number of alive players, \"1\" = icons and number of alive players"
 seta hud_panel_modicons_dom_layout "" "3 possible layouts, active in Domination; \"0\" = only icons, \"1\" = icons and percentage of average pps (points per second), \"2\" = icons and average pps"
 seta hud_panel_modicons_ft_layout "" "2 possible layouts, active in Freeze Tag; \"0\" = number of alive players, \"1\" = icons and number of alive players"
+seta hud_panel_modicons_ons_layout "" "2 possible layouts, active in Onslaught; \"0\" = two-team bar alpha increases towards the center, \"1\" = two-team bar alpha decreases towards the center (NOTE: requires 2 teams and a sufficiently wide/tall panel)"
 
 seta hud_panel_pressedkeys_pos "" "position of this base of the panel"
 seta hud_panel_pressedkeys_size "" "size of this panel"
