--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -211,6 +211,7 @@ seta hud_panel_modicons_bg_padding "0"
 seta hud_panel_modicons_ca_layout "1"
 seta hud_panel_modicons_dom_layout "1"
 seta hud_panel_modicons_ft_layout "1"
+seta hud_panel_modicons_ons_layout "1"
 
 seta hud_panel_pressedkeys_pos "0.445 0.71"
 seta hud_panel_pressedkeys_size "0.11 0.09"
