--- a/hud_luminos_minimal_xhair.cfg
+++ b/hud_luminos_minimal_xhair.cfg
@@ -211,6 +211,7 @@ seta hud_panel_modicons_bg_padding ""
 seta hud_panel_modicons_ca_layout "1"
 seta hud_panel_modicons_dom_layout "1"
 seta hud_panel_modicons_ft_layout "1"
+seta hud_panel_modicons_ons_layout "1"
 
 seta hud_panel_pressedkeys_pos "0.45 0.69"
 seta hud_panel_pressedkeys_size "0.1 0.11"
